<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bsktbl" />


    <RelativeLayout


        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <LinearLayout

                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/teamA"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:text="@string/scoreforteams"
                    android:textColor="#D50000"
                    android:textSize="70sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:onClick="addThreePointsForTeamA"
                    android:text="@string/add3pointsbutton"
                    android:textSize="18sp" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:onClick="addTwoPointsForTeamA"
                    android:text="@string/add2pointsbutton"
                    android:textSize="18sp" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20sp"
                    android:onClick="addOnePointForTeamA"
                    android:text="@string/addfreethrowbutton"
                    android:textSize="18sp" />


            </LinearLayout>


            <View
                android:layout_width="1dp"
                android:layout_height="400dp"
                android:layout_marginTop="16dp"
                android:background="#000000" />


            <LinearLayout

                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical"
                tools:context=".MainActivity">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:padding="4dp"
                    android:text="@string/teamB"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="15dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center_horizontal"
                    android:text="@string/scoreforteams"
                    android:textColor="#D50000"
                    android:textSize="70sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:onClick="addThreePointForTeamB"
                    android:text="@string/add3pointsbutton"
                    android:textSize="18sp" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:onClick="addTwoPointForTeamB"
                    android:text="@string/add2pointsbutton"
                    android:textSize="18sp" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:onClick="addOnePointForTeamB"
                    android:text="@string/addfreethrowbutton"
                    android:textSize="18sp" />


            </LinearLayout>
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="30dp"
            android:onClick="resetScore"
            android:text="@string/resetbutton"
            android:textSize="18sp" />

    </RelativeLayout>
</RelativeLayout>




